...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="cuZ-km-Muu">
                                <rect key="frame" x="58" y="211" width="259" height="30"/>
                                <constraints>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="363-ou-Bsi">
                                <rect key="frame" x="58" y="256" width="259" height="30"/>
                                <constraints>
...
                                <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                            </textField>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="kuva-logo" translatesAutoresizingMaskIntoConstraints="NO" id="pma-uh-ZJg">
                                <rect key="frame" x="84.5" y="80" width="206" height="101"/>
                                <constraints>
...
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <state key="normal" title="Don't have an account?">
                                    <color key="titleColor" red="0.4549019608" green="0.47058823529999999" blue="0.48627450979999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <state key="normal" title="Forgot Your Password?">
                                    <color key="titleColor" red="0.45490196078431372" green="0.47058823529411764" blue="0.48627450980392156" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <state key="normal" title="Sign In"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="layer.cornerRadius" value="8"/>
...
                                    <constraint firstAttribute="height" constant="49" id="hUB-vz-TPM"/>
                                </constraints>
                                <state key="normal" title="Post">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                <rect key="frame" x="0.0" y="64" width="375" height="220"/>
                                <color key="backgroundColor" red="0.1764705882" green="0.1764705882" blue="0.1764705882" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" title="Select Image +">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                            </textView>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Caption goes here..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6uv-FL-L7H">
                                <rect key="frame" x="62" y="315" width="159" height="30"/>
                                <constraints>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Upload" image="tb-upload2" selectedImage="tb-upload2" id="jcB-zw-4E5"/>
                    <navigationItem key="navigationItem" title="Upload Photo" id="w8H-33-eHd">
                        <barButtonItem key="leftBarButtonItem" systemItem="camera" id="R90-FD-X1U">
...
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1GI-Hg-MVL">
                                <rect key="frame" x="58" y="211" width="259" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="forgetEmail"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="259" id="2lk-dt-P8i"/>
...
                                <rect key="frame" x="58" y="271" width="259" height="44"/>
                                <color key="backgroundColor" red="1" green="0.3998408317565918" blue="0.54427498579025269" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="resetPassword"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="aC0-tr-x2X"/>
                                    <constraint firstAttribute="width" constant="259" id="gYP-uo-Ics"/>
                                </constraints>
                                <state key="normal" title="Send Reset Token">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
...
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <state key="normal" title="Go back to sign in?">
                                    <color key="titleColor" red="0.4549019608" green="0.47058823529999999" blue="0.48627450979999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <accessibility key="accessibilityConfiguration" identifier="feedView">
                            <bool key="isElement" value="YES"/>
                        </accessibility>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Feed" image="tb-home" selectedImage="tb-home-cl" id="lsk-Q9-Cfh"/>
                    <navigationItem key="navigationItem" title="kuva" id="66d-QL-fxI">
                        <barButtonItem key="leftBarButtonItem" systemItem="camera" id="lbG-YG-BUl">
                            <color key="tintColor" red="0.1764705882" green="0.1764705882" blue="0.1764705882" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        </barButtonItem>
