...
        }
        
        locationManager.distanceFilter = kCLDistanceFilterNone
        locationManager.desiredAccuracy = kCLLocationAccuracyBest
        locationManager.startUpdatingLocation()
        
        cameraButton.accessibilityIdentifier = "camerabutton"
        sortButton.accessibilityIdentifier = "sortbutton"

        //self.postsCollectbionView!.register(PostCollectionViewCell.self, forCellWithReuseIdentifier: "Cell")
        
        updateCurrentView()

...
