...
        }
    }
    
    @IBAction func postButtonPressed(_ sender: Any) {
        if self.selectImageButton.isEnabled {
            //Image not selected
            let alert:UIAlertController = UIAlertController(title: "Select an image", message: "Select an image to upload to kuva", preferredStyle: UIAlertControllerStyle.alert)
            alert.addAction(UIAlertAction(title: "OK", style: UIAlertActionStyle.default, handler: self.resetFeedView))
            self.present(alert, animated: true, completion: nil)
            return
        }
        
        let caption:String = captionTextView.text
...
